--- a/student/templates/AdminStudent.html
+++ b/student/templates/AdminStudent.html
@@ -3,15 +3,24 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>课程管理</title>
-    <link rel="stylesheet" type="text/css" href="{% static 'css/layui.css' %}"/>
+    <title>学生信息管理</title>
+    <link rel="stylesheet" type="text/css" href="http://x.xuebingsi.com/x-admin/v2.2/lib/layui/css/layui.css" />
+<!--    <link rel="stylesheet" href="{% static 'css/layui.css'%}"/>-->
+    <link rel="stylesheet" href="http://x.xuebingsi.com/x-admin/v2.2/css/font.css">
+<!--    <link rel="stylesheet" href="static/css/font.css"/>-->
+    <link rel="stylesheet" href="http://x.xuebingsi.com/x-admin/v2.2/css/login.css">
+<!--    <link rel="stylesheet" href="static/css/login.css"/>-->
+    <link rel="stylesheet" href="http://x.xuebingsi.com/x-admin/v2.2/css/xadmin.css">
+<!--    <link rel="stylesheet" href="static/css/xadmin.css"/>-->
+    <script type="text/javascript" src="https://cdn.bootcss.com/jquery/3.2.1/jquery.min.js"></script>
+    <script src="http://x.xuebingsi.com/x-admin/v2.2/lib/layui/layui.js"></script>
 </head>
 <body>
 <!--管理员 课程管理-->
 {% block content %}
     <div class="layui-container">
         <blockquote class="layui-elem-quote">
-            <h1>CRUD——Django + LayUI</h1>
+            <h1>学生信息管理页面</h1>
         </blockquote>
         {# 显示所有学生模块 #}
         <table class="layui-table">
