--- a/student/templates/AdminStudentAdd.html
+++ b/student/templates/AdminStudentAdd.html
@@ -3,14 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <title>学生信息添加</title>
-     <link rel="stylesheet" type="text/css" href="{% static 'css/layui.css' %}"/>
+     <link rel="stylesheet" type="text/css" href="http://x.xuebingsi.com/x-admin/v2.2/lib/layui/css/layui.css" />
+<!--    <link rel="stylesheet" href="{% static 'css/layui.css'%}"/>-->
+    <link rel="stylesheet" href="http://x.xuebingsi.com/x-admin/v2.2/css/font.css">
+<!--    <link rel="stylesheet" href="static/css/font.css"/>-->
+    <link rel="stylesheet" href="http://x.xuebingsi.com/x-admin/v2.2/css/login.css">
+<!--    <link rel="stylesheet" href="static/css/login.css"/>-->
+    <link rel="stylesheet" href="http://x.xuebingsi.com/x-admin/v2.2/css/xadmin.css">
+<!--    <link rel="stylesheet" href="static/css/xadmin.css"/>-->
+    <script type="text/javascript" src="https://cdn.bootcss.com/jquery/3.2.1/jquery.min.js"></script>
+    <script src="http://x.xuebingsi.com/x-admin/v2.2/lib/layui/layui.js"></script>
 </head>
 <body>
 <!--学生添加-->
 {% block content %}
     <div class="layui-container">
         <blockquote class="layui-elem-quote">
-            <h1>Add Student</h1>
+            <h1>学生信息添加页面</h1>
         </blockquote>
 
         <div class="layui-row">
