--- a/student/templates/AdminTeacher.html
+++ b/student/templates/AdminTeacher.html
@@ -3,15 +3,24 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>课程管理</title>
-    <link rel="stylesheet" type="text/css" href="{% static 'css/layui.css' %}"/>
+    <title>教师信息管理</title>
+    <link rel="stylesheet" type="text/css" href="http://x.xuebingsi.com/x-admin/v2.2/lib/layui/css/layui.css" />
+<!--    <link rel="stylesheet" href="{% static 'css/layui.css'%}"/>-->
+    <link rel="stylesheet" href="http://x.xuebingsi.com/x-admin/v2.2/css/font.css">
+<!--    <link rel="stylesheet" href="static/css/font.css"/>-->
+    <link rel="stylesheet" href="http://x.xuebingsi.com/x-admin/v2.2/css/login.css">
+<!--    <link rel="stylesheet" href="static/css/login.css"/>-->
+    <link rel="stylesheet" href="http://x.xuebingsi.com/x-admin/v2.2/css/xadmin.css">
+<!--    <link rel="stylesheet" href="static/css/xadmin.css"/>-->
+    <script type="text/javascript" src="https://cdn.bootcss.com/jquery/3.2.1/jquery.min.js"></script>
+    <script src="http://x.xuebingsi.com/x-admin/v2.2/lib/layui/layui.js"></script>
 </head>
 <body>
 <!--管理员 教师管理-->
 {% block content %}
     <div class="layui-container">
         <blockquote class="layui-elem-quote">
-            <h1>CRUD——Django + LayUI</h1>
+            <h1>教师信息管理页面</h1>
         </blockquote>
         {# 显示所有教师模块 #}
         <table class="layui-table">
@@ -27,6 +36,7 @@
             <th>性别</th>
             <th>学院</th>
             <th>专业</th>
+            <th>出生日期</th>
             <th>修改</th>
         </tr>
       </thead>
@@ -38,6 +48,7 @@
                 <td>{{teacher.TeaSex}}</td>
                 <td>{{teacher.TeaCollege}}</td>
                 <td>{{teacher.TeaMajor}}</td>
+                <td>{{teacher.TeaBirth}}</td>
                 <td>
                     {# 修改教师模块 #}
                     <a href="/search_teacher/{{ teacher.TeaNum }}" class="layui-btn layui-btn-danger">
