--- a/student/templates/AdminTeacherAdd.html
+++ b/student/templates/AdminTeacherAdd.html
@@ -2,15 +2,24 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>学生信息添加</title>
-     <link rel="stylesheet" type="text/css" href="{% static 'css/layui.css' %}"/>
+    <title>教师信息添加</title>
+    <link rel="stylesheet" type="text/css" href="http://x.xuebingsi.com/x-admin/v2.2/lib/layui/css/layui.css" />
+<!--    <link rel="stylesheet" href="{% static 'css/layui.css'%}"/>-->
+    <link rel="stylesheet" href="http://x.xuebingsi.com/x-admin/v2.2/css/font.css">
+<!--    <link rel="stylesheet" href="static/css/font.css"/>-->
+    <link rel="stylesheet" href="http://x.xuebingsi.com/x-admin/v2.2/css/login.css">
+<!--    <link rel="stylesheet" href="static/css/login.css"/>-->
+    <link rel="stylesheet" href="http://x.xuebingsi.com/x-admin/v2.2/css/xadmin.css">
+<!--    <link rel="stylesheet" href="static/css/xadmin.css"/>-->
+    <script type="text/javascript" src="https://cdn.bootcss.com/jquery/3.2.1/jquery.min.js"></script>
+    <script src="http://x.xuebingsi.com/x-admin/v2.2/lib/layui/layui.js"></script>
 </head>
 <body>
 <!--教师添加-->
 {% block content %}
     <div class="layui-container">
         <blockquote class="layui-elem-quote">
-            <h1>Add Teacher</h1>
+            <h1>教师信息添加页面</h1>
         </blockquote>
 
         <div class="layui-row">
@@ -35,11 +44,25 @@
                     <input type="text" name="TeaMajor" id="TeaMajor" placeholder="所属专业" class="layui-input"/>
                     <hr class="layui-bg-green">
 
+                    <div class="layui-inline"> <!-- 注意：这一层元素并不是必须的 -->
+                        <input type="text" placeholder="出生日期" name="TeaBirth" class="layui-input" id="test1">
+                    </div>
+
                     <input type="submit" value="添加" class="layui-btn"/>
                 </form>
             </div>
         </div>
     </div>
+<script>
+layui.use('laydate', function(){
+  var laydate = layui.laydate;
+
+  //执行一个laydate实例
+  laydate.render({
+    elem: '#test1' //指定元素
+  });
+});
+</script>
 {% endblock %}
 </body>
 </html>
