--- a/student/templates/AdminTeacher.html
+++ b/student/templates/AdminTeacher.html
@@ -61,7 +61,7 @@
         </table>
 
         {# 添加教师模块 #}
-        <a href="/AdminTeacherAdd" class="layui-btn layui-btn-warm">
+        <a href="{%url 'admin:AdminTeacherAdd' %}" class="layui-btn layui-btn-warm">
             <i class="layui-icon">&#xe654;</i> 添加
         </a>
     </div>
