--- a/student/templates/AdminStudentAdd.html
+++ b/student/templates/AdminStudentAdd.html
@@ -25,7 +25,7 @@
         <div class="layui-row">
 
             <div class="layui-col-md9">
-                <form action="/AdminAddStudent/" method="post" class="layui-form layui-form-pane" />
+                <form action="{%url 'admin:AdminAddStudent' %}" method="post" class="layui-form layui-form-pane" />
                 {% csrf_token %}
                     <hr class="layui-bg-green">
 
